Добавил эндпоинт на добавление ссылок на вк и тг. Изменил пайплайн, стратегию развертывания
