# src/main/java/ru/tpu/hostel/user/dto/request/UserAddLinkDto.java
@@ -1,0 +1,7 @@
+package ru.tpu.hostel.user.dto.request;
+
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+
+public record UserAddLinkDto(@NotEmpty @NotNull String link) {
+}
