# src/main/java/ru/tpu/hostel/user/dto/response/UserNameResponseDto.java
@@ -4,6 +4,8 @@ public record UserNameResponseDto(
         String firstName,
         String lastName,
         String middleName,
-        String roomNumber
+        String roomNumber,
+        String tgLink,
+        String vkLink
 ) {
 }
