# src/main/java/ru/tpu/hostel/user/dto/response/UserShortResponseDto2.java
@@ -6,6 +6,8 @@ public record UserShortResponseDto2(
         UUID id,
         String firstName,
         String lastName,
-        String middleName
+        String middleName,
+        String tgLink,
+        String vkLink
 ) {
 }
