# src/main/java/ru/tpu/hostel/user/entity/LinkType.java
@@ -1,0 +1,15 @@
+package ru.tpu.hostel.user.entity;
+
+import lombok.Getter;
+import lombok.RequiredArgsConstructor;
+
+@RequiredArgsConstructor
+@Getter
+public enum LinkType {
+
+    TG("Телеграмм"),
+
+    VK("ВК");
+
+    private final String label;
+}
